--- a/Shop WebSite/styles.css
+++ b/Shop WebSite/styles.css
@@ -226,9 +226,16 @@ nav ul li a:hover {
 
 .contact-info p a{
   text-decoration: none;
-  color: #ff416c;
+  color: #ededed;
   line-height: 1.2;
   font-weight: bold;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+#email{
+  color: #ff416c;
+
 }
 
 form {
@@ -329,3 +336,62 @@ footer {
   .accordion.active .accordion-content {
     max-height: 200px;
   }
+
+
+
+  /* Our Location Section */
+#our-location {
+  background: linear-gradient(135deg, #1f1c2c, #928dab);
+  padding: 60px 20px;
+  text-align: center;
+}
+
+#our-location h2 {
+  color: #ffffff;
+  font-size: 2.3em;
+  margin-bottom: 20px;
+}
+
+.box {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: 30px;
+  opacity: 0.8;
+  transition: all 1s ease-in-out;
+  
+}
+.map-text{
+  font-size: 3.5rem;
+  color: #ffffff;
+  font-weight: bold;
+ 
+  
+}
+
+.box iframe:hover{
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  opacity: 1;
+}
+
+.con-head{
+  font-size: 2.5rem;
+  color: #ffffff;
+  font-weight: bold;
+
+}
